# DreamPicoPort

./: CMakeLists.txt  LICENSE.md  README.md  build.sh
.github/workflows/: release.yml  test.yml
3d_objects/: DPP-Case-1P-BambuStudio.3mf  DPP-Case-1P-raw.3mf  DPP-Case-2P-BambuStudio.3mf  DPP-Case-2P-raw.3mf  DPP-Case-4P-BambuStudio.3mf  DPP-Case-4P-raw.3mf  DPP-Case-Ribbon-BambuStudio.3mf  DPP-Case-Ribbon-raw.3mf  DPP-Dummy-Board-raw.3mf
docs/: application.css  application.js  index.html
docs/webusb/: LICENSE  application.css  application.js  index.html  (+1 more)
inc/: GamepadHost.hpp  VibrationObserver.hpp  configuration.h  dpp_version.h  dreamcast_constants.h  dreamcast_structures.h  dynamic_configuration.h  global_constants.h  utils.h
pcb/: DreamPicoPortSchem.3mf  DreamPicoPortSchem.brd  DreamPicoPortSchem.cam  DreamPicoPortSchem.sch  acknowledgements.txt
scripts/: makeDefaultSettingsUf2.py
src/hostLib/: CMakeLists.txt  DreamcastMainNode.cpp  DreamcastMainNode.hpp  DreamcastNode.hpp  DreamcastNodeData.hpp  DreamcastSubNode.cpp  DreamcastSubNode.hpp  EndpointTxScheduler.cpp  EndpointTxScheduler.hpp  EndpointTxSchedulerInterface.hpp  PlayerData.hpp  PrioritizedTxScheduler.cpp  PrioritizedTxScheduler.hpp  ScreenData.cpp  ScreenData.hpp  Transmission.hpp  TransmissionTimeliner.cpp  TransmissionTimeliner.hpp  Transmitter.hpp
src/hostLib/parsers/: FlycastCommandParser.cpp  FlycastCommandParser.hpp
src/hostLib/peripherals/: DreamcastArGun.cpp  DreamcastArGun.hpp  DreamcastCamera.cpp  DreamcastCamera.hpp  DreamcastController.cpp  DreamcastController.hpp  DreamcastExMedia.cpp  DreamcastExMedia.hpp  DreamcastGun.cpp  DreamcastGun.hpp  DreamcastKeyboard.cpp  DreamcastKeyboard.hpp  DreamcastMicrophone.cpp  DreamcastMicrophone.hpp  DreamcastMouse.cpp  DreamcastMouse.hpp  DreamcastPeripheral.hpp  DreamcastScreen.cpp  DreamcastScreen.hpp  DreamcastStorage.cpp  DreamcastStorage.hpp  DreamcastTimer.cpp  DreamcastTimer.hpp  DreamcastVibration.cpp  DreamcastVibration.hpp
src/hostLib/test/: MainNodeTests.cpp  MaplePacketTests.cpp  PrioritizedTxSchedulerTests.cpp  SerialStreamParserTests.cpp  SubNodeTests.cpp
src/hostLib/test/mocks/: MockClock.hpp  MockDreamcastControllerObserver.hpp  MockDreamcastPeripheral.hpp  MockMapleBus.hpp  MockMutex.hpp  MockTtyCommandHandler.hpp  MockUsbFileSystem.hpp
src/hostLib/tty_parsers/: FlycastCommandParser.cpp  FlycastCommandParser.hpp  FlycastTtyCommandHandler.cpp  FlycastTtyCommandHandler.hpp  MaplePassthroughCommandParser.cpp  MaplePassthroughCommandParser.hpp  MaplePassthroughTtyCommandHandler.cpp  MaplePassthroughTtyCommandHandler.hpp  SerialStreamParser.cpp  SerialStreamParser.hpp
src/hostLib/webusb_parsers/: FlycastWebUsbCommandHandler.cpp  FlycastWebUsbCommandHandler.hpp  FlycastWebUsbParser.cpp  FlycastWebUsbParser.hpp  MapleWebUsbCommandHandler.cpp  MapleWebUsbCommandHandler.hpp  MapleWebUsbParser.cpp  MapleWebUsbParser.hpp  SettingsWebUsbCommandHandler.cpp  SettingsWebUsbCommandHandler.hpp  SettingsWebUsbParser.cpp  SettingsWebUsbParser.hpp  SystemWebUsbCommandHandler.cpp  SystemWebUsbCommandHandler.hpp
src/main/Host/: CMakeLists.txt  host.cpp  host_main.cpp  host_setup.cpp  host_setup.hpp
webusb/: application.css  application.js  index.html  serial.js
(+102 files in other folders)
